# aie-srhg

./: README.md
00_AE_Quicklinks/: README.md
00_Docs/: README.md
00_Docs/Modules/00_Git_Setup/: README.md
00_Docs/Modules/01_Intro_and_Vibe_Check/: README.md
00_Docs/Modules/02_Dense_Vector_Retrieval/: README.md
00_Docs/Modules/03_The_Agent_Loop/: README.md
00_Docs/Modules/05_Multi-Agent_Applications/: README.md
00_Docs/Modules/06_Agent_Memory/: README.md
00_Docs/Modules/09_Advanced_Retreivers/: README.md
00_Docs/Modules/10_Deep_Agents/: README.md
00_Docs/Modules/11_Deep_Research/: README.md
00_Docs/Modules/13_Agent_Servers/: README.md
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb
02_Dense_Vector_Retrieval/aimakerspace/: vectordatabase_enhanced.py
03_The_Agent_Loop/: README.md  The_Agent_Loop_Assignment.ipynb  pyproject.toml
03_The_Agent_Loop/aimakerspace/openai_utils/: chatmodel.py  embedding.py  prompts.py
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  README.md  pyproject.toml
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb  README.md  pyproject.toml
05_Multi_Agent_with_LangGraph/data/: HealthWellnessGuide.txt
06_Agent_Memory/: .env.sample  Agent_Memory_Assignment.ipynb  ENHANCEMENT.md  README.md  langgraph.json  pyproject.toml
06_Agent_Memory/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  store.pckl
06_Agent_Memory/src/investment_memory/: __init__.py  agents.py  memory_types.py  stores.py  utils.py
07_Synthetic_Data_and_Evaluation/: Evaluating_Agents_Assignment.ipynb  README.md  Synthetic_Data_Generation_and_RAG_Evaluation_Assignment.ipynb
08_Advanced_Retrieval_and_Deep_Research/: .env.sample  01_Advanced_Retrieval_Assignment.ipynb  02_Deep_Agents_Assignment.ipynb  03_Open_Deep_Research_Assignment.ipynb  README.md  pyproject.toml
08_Advanced_Retrieval_and_Deep_Research/data/: AlternativeInvestmentsHandbook.txt
08_Advanced_Retrieval_and_Deep_Research/skills/investment-research/: SKILL.md
08_Advanced_Retrieval_and_Deep_Research/skills/portfolio-assessment/: SKILL.md
09_Production_and_MCP/: README.md  Session_09_LangGraph_Platform.ipynb  Session_09_MCP_Connectors_and_X_API.ipynb  Session_09_MCP_Servers.ipynb  Session_09_Production_RAG_and_Guardrails.ipynb  langgraph.json  mcp_server.py
09_Production_and_MCP/app/: agent.py
