[project]
name = "04-agentic-rag-from-scratch"
version = "0.1.0"
description = "Agentic RAG From Scratch - Building Agents with LangGraph and Open-Source Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    "langgraph>=0.3.0",
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
]
