[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-memory"
version = "0.1.0"
description = "Agent Memory - Building Memory-Enabled Investment Agents with LangGraph"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    "langgraph>=0.3.0",
    "langgraph-cli[inmem]>=0.1.0",
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
    "tiktoken>=0.8.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["investment_memory*"]
