[project]
name = "advanced-retrieval-and-deep-research"
version = "0.1.0"
description = "Module 8: Advanced Retrieval, Deep Agents, and Open Deep Research"
authors = [
    { name = "Chris Alexiuk" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Notebook 1: Advanced Retrieval
    "langchain>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-cohere>=0.4.6",
    "cohere>=5.18.0",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    # Notebook 2: Deep Agents
    "deepagents>=0.3.0",
    "langchain-anthropic>=0.3.15",
    "pyyaml>=6.0",
    "nest-asyncio>=1.5.0",
    # Notebook 3: Open Deep Research
    "langgraph>=0.5.4",
    "langchain-community>=0.3.9",
    "langchain-mcp-adapters>=0.1.6",
    "langchain-deepseek>=0.1.2",
    "langchain-tavily",
    "langchain-groq>=0.2.4",
    "openai>=1.99.2",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "linkup-sdk>=0.2.3",
    "duckduckgo-search>=3.0.0",
    "exa-py>=1.8.8",
    "requests>=2.32.3",
    "beautifulsoup4==4.13.3",
    "httpx>=0.24.0",
    "markdownify>=0.11.6",
    "rich>=13.0.0",
    "langsmith>=0.3.37",
    "pypdf>=6.1.1",
    "pypdf2>=3.0.1",
    "pandas>=2.3.1",
    # Shared
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
cli = [
    "deepagents-cli>=0.0.15",
]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.11.1",
    "ruff>=0.6.1",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["open_deep_research"]

[tool.setuptools.package-dir]
"open_deep_research" = "open_deep_library"

[tool.setuptools.package-data]
"*" = ["py.typed"]
